[package]
name = "pow"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", features = ["metadata"] }
mpl-token-auth-rules = { version = "1.4.3", features = ["no-entrypoint"] }
mpl-token-metadata = "4.0.2"
# Needed for using pubkey!(), version matches anchor-lang
solana-program = "^1.16"
